# html

./: .gitignore  README.md  index.html  pyproject.toml  script.js  styles.css
app/: server.py
app/static/: app.js  index.html  styles.css
pdfassembler/: __init__.py  document.py  parser.py  primitives.py  serializer.py  tokenizer.py
src/pdfassembler/: __init__.py  document.py  pdf_writer.py  png.py  storage.py
src/pdfassembler_gui/: __init__.py  app.py  main.py
tests/: test_pdfassembler.py  test_png.py
