[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdfassembler-gui"
version = "0.1.0"
description = "A Tkinter-based GUI for editing PDFs using the bundled pdfassembler library"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "AI Assistant"}]
dependencies = []

[project.scripts]
pdfassembler-gui = "pdfassembler_gui.main:main"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
